# clawd-coad

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
clawd/: agent.py  cli.py  config.py  llm.py  pricing.py  prompt.py  skills.py  tracing.py  tui.py  worktree.py
clawd/tools/: __init__.py  dispatch.py  fs.py  shell.py  skills.py  web.py
clawd/tui/: app.py  commands.py  input.py  ledger.py  render.py  theme.py
clawd/web/: server.py
clawd/web/static/: app.css  app.js  index.html
demo/: demo.tape
docs/: README.md
docs/concepts/: 00-design-space.md  01-agent-loop.md  02-talking-to-a-model.md  03-system-prompt.md  04-tools-filesystem.md  05-tools-shell-web.md  06-worktrees.md  07-observability.md  08-tui.md  09-sandbox.md
docs/how-to/: add-a-tool.md  run-the-sandbox.md  serve-the-web-frontend.md  verify-the-sandbox.md  write-a-skill.md
docs/reference/: configuration.md  slash-commands.md
docs/superpowers/specs/: 2026-04-26-tui-polish-design.md  2026-04-26-vhs-demo-bug-hunt-design.md
scripts/: clawd-sandbox
tests/: conftest.py  test_dispatch_tool.py  test_fs_tools.py  test_input.py  test_jail.py  test_ledger.py  test_pricing.py  test_prompt.py  test_render.py  test_shell_tools.py  test_skills.py  test_skills_tool.py  test_tracing.py  test_web_tool.py  test_worktree.py
