[project]
name = "clawd"
version = "0.0.1"
description = "An open-source agentic CLI for fun and learning"
readme = "README.md"
license = "MIT"
authors = [{ name = "David Biagioni" }]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langfuse>=4",
    "pydantic-settings>=2.5.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
    "langchain>=0.3",
]

[project.scripts]
clawd = "clawd.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pre-commit>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clawd"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
